--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,6 +21,8 @@ $colors: (
     'pink': #fe7e73,
     'while': #fff,
     'black': #000,
+    'yellow':#FFFF00,
+    'red':#FF0000,
     'main': $primary,
 );
 
