--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,4 +9,9 @@
 @import './Components/Section';
 @import './Components/Policy';
 @import './Components/ProductCart';
+@import './Components/Banner';
+@import './Components/Catalog';
+@import './Components/CheckBox';
+@import './Components/ProductView.scss';
+@import './Components/ToastMsg.scss';
 
