--- a/src/sass/Components/_Button.scss
+++ b/src/sass/Components/_Button.scss
@@ -7,7 +7,8 @@
     text-transform: uppercase;
     position: relative;
     cursor: pointer;
-
+    overflow: hidden;
+    
     @include mobile {
         font-size: 1rem;
     }
